fixed timeline tag truncation

--- a/public/css/createEntry.css
+++ b/public/css/createEntry.css
@@ -32,16 +32,25 @@
     border-radius: 10px;
 }
 
-#create-entry-tag{
+#tag-creation{
     background-color: var(--bg-secondary);
     width: fit-content;
-    height: 35px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     border-radius: 10px;
+    height: 35px;
+    align-items: center;
+    padding: 0px 13px;
+}
+
+#create-tag-btn{
+    margin-left: 3px;
+}
+
+#create-entry-tag{
+    display: flex;
+    /* justify-content: center; */
     gap: 10px;
-    padding: 0 15px;
+    /* padding: 0 15px; */
 }
 
 #create-tag-input{
@@ -50,6 +59,8 @@
     border: none;
     outline: none;
     font-weight: 500;
+    margin-left: 10px;
+    width: 158px;
 }
 
 #tag-cont{
